frontend/k8s/prod/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gceme-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      env: production
  template:
    metadata:
      labels:
        env: production
    spec:
      containers:
      - name: frontend
        command:
          - "/go/src/app/app"
          - "-backend-service"
          - "http://gceme-backend-prod:8080"
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
